# fhs_quick_fox_status

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
src/: main.rs  myconfig.rs  run.rs  tn.rs
src/tn/: duration2int.rs  json.rs
